# DroidDemo

./: .gitignore  .travis.yml  OpenGLES_Assimp_GLM_OpenCV_README.md  README.md  build.gradle  gradle.properties  import-summary.txt  settings.gradle
.github/workflows/: Build.yml  BuildAndTest.yml  Release.yml  Test.yml  android.yml  codeql-analysis.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: frag.sh  vertex.sh
app/src/main/assets/shader/: fs.glsl  vs.glsl
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/opencv2/flann/: autotuned_index.h
app/src/main/cpp/jniCalls/: assimpActivity.cpp  gestureClass.cpp  myGLRenderer.cpp
app/src/main/cpp/nativeCode/common/: assimpLoader.cpp  assimpLoader.h  misc.cpp  misc.h  myGLCamera.cpp  myGLCamera.h  myGLFunctions.cpp  myGLFunctions.h  myGLM.h  myShader.cpp
app/src/main/cpp/nativeCode/modelAssimp/: modelAssimp.cpp  modelAssimp.h
app/src/main/cpp/opencv/include/opencv2/flann/: autotuned_index.h
app/src/main/cpp/others/: hello.c
app/src/main/jni/: Android.mk  JniRenderer.c  hello.c
app/src/main/kotlin/: Test.kt
app/src/main/res/anim/: animation_set.xml  set.xml
app/src/main/res/animator/: anim_path_end.xml  property_set.xml
app/src/main/res/color/: leftmenu_list_item_tv_color.xml  vpi__dark_theme.xml
app/src/main/res/drawable/: anim_helix_play.xml  appcard_bg_selector.xml  bg_dialog.xml  divider_bg.xml  imageview_selector.xml  listview_item_normal.xml  listview_item_pressed.xml  listview_item_selector.xml  progress_bar_style.xml  seek_background.xml  shape_hot_fl_tv.xml  xml_buttom_btn_press.xml  xml_playback_btn_press.xml
app/src/main/res/layout/: activity_add_friends.xml  activity_aidl.xml  activity_animation.xml  activity_app_list.xml  activity_app_list_item.xml  activity_autoconnect.xml  activity_blur.xml  activity_camera_animation.xml  activity_card_view.xml  activity_chat.xml  activity_clip_path.xml  activity_common_service.xml  activity_contraint_layout.xml  activity_custom_animation.xml  activity_decor_view.xml  activity_dialog.xml  activity_done.xml  activity_drawee_view.xml  activity_easychat.xml  activity_easymusic.xml  activity_fragment.xml  (+152 more)
googlePlay_8/: build.gradle
googlePlay_8/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
materialanimations/: build.gradle
pagerSlidingTabStrip/: build.gradle
slidingMenu_library/: build.gradle
smartBJ/: build.gradle
smartBJ/src/main/: AndroidManifest.xml
viewPageIndicator_library/: build.gradle
xutils_lib/: build.gradle
(+952 files in other folders)
